--- a/indexB.html
+++ b/indexB.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="./reset.css">
 <link rel="stylesheet" href="style.css">
-<title>Site de Eventos Bernardo</title>
+<title>QUAL É A BOA?</title>
 
 </head>
 <body>
@@ -27,15 +27,15 @@
                 <div class="es"> <input type="password" id="password" name="password" placeholder="Senha"> </div>
                 <br>                                
                 <a href="a" class="recuperar_senha">Esqueceu a senha?</a>
-                <br><br>
+                <br><br><br>
                 <input type="submit" class="enviar" value="Entrar">
                 <br><br>
-                <button type="button" id="contaG" class="contas">Entrar com Google</button> 
+                <!-- <button type="button" id="contaG" class="contas">Entrar com Google</button> 
                 <br><br>
                 <button type="button" id="contaF" class="contas">Entrar com Facebook</button> 
-                <br><br>
+                <br><br> -->
                 <div class="registra"><p> Não tem cadastro?<a href="cadastro.html" target="self"> Registre-se</a></p> </div>
-                <br>
+                <br><br><br>
                 <!-- <br><br>
                 <a href="a" class="recuperar_senha">Esqueceu a senha?</a>
                 <br><br> -->
