--- a/indexB.html
+++ b/indexB.html
@@ -20,13 +20,13 @@
                 <form class="card">
                 
                 <div class="card-header">
-                <h2>Login</h2>    
+                <h2>L O G I N</h2>    
                 </div>
 
                 <div class="es"> <input type="email" id="email" name="email" placeholder="E-mail"> </div>
                 <div class="es"> <input type="password" id="password" name="password" placeholder="Senha"> </div>
                 <br>                                
-                <a href="a" class="recuperar_senha">Esqueceu a senha?</a>
+                <a href="#" class="recuperar_senha">Esqueceu a senha?</a>
                 <br><br><br>
                 <input type="submit" class="enviar" value="Entrar">
                 <br><br>
