--- a/htdocs/editardados.html
+++ b/htdocs/editardados.html
@@ -4,61 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link REL="SHORTCUT ICON" HREF="assets/favicon.ico">
-    <title>Login</title>
 
-	<link rel="stylesheet" type="text/css" href="./styles/util.css">
-    <link rel="stylesheet" type="text/css" href="./styles/main.css">
-	<link rel="stylesheet" type="text/css" href="./styles/main.css">
-	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-	
+    <title>Qual é a boa?</title>
+	<link REL="SHORTCUT ICON" HREF="assets/favicon.ico">
+
+	<link rel="stylesheet" type="text/css" href="styles/util.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 	
     <div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form" action ="usuario.php" method ="get">
 					<span class="login100-form-title p-b-26">
-						Cadastro
+						Atualizar meus dados
 					</span>
-
-					<?php
-                    if(isset($_SESSION['nao_autenticado'])):
-                    ?>
-                    <p> ERRO: Usuário ou senha inválidos. </p>
-                    <?php
-                    unset($_SESSION['nao_autenticado']);
-                    endif;
-                    ?>
-
 					<span class="login100-form-title p-b-48">
 						<!-- <i class="zmdi zmdi-font"></i> -->
 					</span>
 
 					<div class="wrap-input100 validate-input">
-						<input class="input100" type="text" name="login" required autocomplet="off">
+						<input class="input100" type="text" name="login">
 						<span class="focus-input100" data-placeholder="Login"></span>
 					</div>
 					
 					<div class="wrap-input100 validate-input">
-						<input class="input100" type="text" name="nome_usuario" required>
+						<input class="input100" type="text" name="nome_usuario">
 						<span class="focus-input100" data-placeholder="Primeiro nome"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input">
-						<input class="input100" type="text" name="sobrenome" required>
+						<input class="input100" type="text" name="sobrenome">
 						<span class="focus-input100" data-placeholder="Sobrenome"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-						<input class="input100" type="email" name="email" required>
+						<input class="input100" type="email" name="email">
 						<span class="focus-input100" data-placeholder="E-mail"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="Enter password">
+					<!-- <div class="wrap-input100 validate-input" data-validate="Enter password">
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
-						<input class="input100" type="password" name="senha" required>
+						<input class="input100" type="password" name="senha">
 						<span class="focus-input100" data-placeholder="Senha"></span>
 					</div>
 
@@ -66,19 +54,19 @@
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
-						<input class="input100" type="password" name="confirmarsenha" minlength="8" required>
-						<span class="focus-input100" data-placeholder="Confirme sua senha" minlength="8"></span>
-					</div>
+						<input class="input100" type="password" name="senha">
+						<span class="focus-input100" data-placeholder="Confirme sua senha"></span>
+					</div> -->
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-						<input class="input100" type="date" name="data_nascimento" required>
+						<input class="input100" type="date" name="data_nascimento">
 						<span class="focus-input100" data-placeholder=""></span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-						<input class="input100" type="int" name="cpf" required>
+					<!-- <div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+						<input class="input100" type="int" name="sobrenome">
 						<span class="focus-input100" data-placeholder="CPF"></span>
-					</div>
+					</div> -->
 
 				<!-- <h5>Coloque um arquivo de foto sua aqui:</h5>
             	<label class="lab" for="arquivo">Enviar arquivo</label>
@@ -94,28 +82,15 @@
             </script> -->
 
 					
-	
+
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button name="op" value="Registrar" class="login100-form-btn">
-								Cadastrar
+							<button class="login100-form-btn">
+								Alterar
 							</button>
 						</div>
-					</div>
-		
-
-					<div class="text-center p-t-115">
-						<span class="txt1">
-							Já possui Cadastro?
-						</span>
-
-						<a class="txt2" href="entrada.php">
-							Faça login!
-						</a>
-					</div>
-
-			
+					</div>			
 				</form>
 			</div>
 		</div>
@@ -123,10 +98,6 @@
 
 </head>
 <body>
-    <script src="./css/main.js"></script> 
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="js/main.js"></script>
-    <script src="styles/main.js"></script>
-
+    <!-- <script src="./css/main.js"></script> -->
 </body>
 </html>
